<resources>
    <string name="app_name">Hotel Organizer</string>

    <string name="date_start">Date</string>
    <string name="debt">Debt</string>
    <string name="delete_all_apartment">Delete ALL apartment info</string>
    <string name="delete_all_client">Delete ALL contact info</string>
    <string name="delete_all_data">Delete ALL date info</string>
    <string name="dialog_apartment_add">Add new apartment</string>
    <string name="dialog_back">Back</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_client_add">Add new contact</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_data_add">Add new data</string>
    <string name="dialog_deleting_apartment">Delete apartment info</string>
    <string name="dialog_deleting_client">Delete contact\'s info</string>
    <string name="dialog_deleting_data">Delete data info</string>
    <string name="dialog_editing_apartment">Edit apartment info</string>
    <string name="dialog_editing_apartment_edit">Editing apartment</string>
    <string name="dialog_editing_client">Edit client info</string>
    <string name="dialog_editing_client_edit">Editing contact</string>
    <string name="dialog_editing_data">Edit data info</string>
    <string name="dialog_editing_data_edit">Editing data</string>
    <string name="dialog_error_empty_address">Error: empty address or short description</string>
    <string name="dialog_error_empty_family_name">Error: empty Last Name</string>
    <string name="dialog_error_empty_mobil">Error: empty phone number</string>
    <string name="dialog_error_empty_name">Error: empty Name</string>
    <string name="dialog_error_empty_oplacheno">Error: empty paid</string>
    <string name="dialog_error_empty_shortcut">Error: empty shortcut</string>
    <string name="dialog_error_empty_start_day">Error: empty start day</string>
    <string name="dialog_next">Next</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_removing_message_apartment">Are you sure want to delete this apartment? All associated data will be deleted</string>
    <string name="dialog_removing_message_apartment_all">Are you sure want to delete ALL apartment?</string>
    <string name="dialog_removing_message_client">Are you sure want to delete this contact?</string>
    <string name="dialog_removing_message_client_all">Are you sure want to delete ALL contact?</string>
    <string name="dialog_removing_message_data">Are you sure want to delete this data?</string>
    <string name="dialog_removing_message_data_all">Are you sure want to delete ALL date?</string>
    <string name="dissmiss">Dismiss</string>
    <string name="download">Download</string>
    <string name="email">E-mail</string>
    <string name="end_date">End date</string>
    <string name="failed_import_photo">Failed import photo</string>
    <string name="file_not_found">File not found</string>
    <string name="file_selected">File selected</string>
    <string name="file_write_failed">Synchronization filed</string>
    <string name="first_name">Name</string>
    <string name="free_apartment">Free apartment</string>
    <string name="guide">Guide</string>
    <string name="help1">Click the icon in the form of three dots in the upper right corner. Go to \"Apartments\"</string>
    <string name="help2">Press the circle with a plus sign to add the information in the apartment. Here you can edit and delete this  data</string>
    <string name="help3">" After you create the required number of flats records go back to the table"</string>
    <string name="help4">You can call the guide menu in the upper right corner. Now click on the icon with the plus sign to fill in the data for the desired dates. At the end of the dialogue, you can select \"Confirmed\" or \"Reserved\"</string>
    <string name="help5">Clicking on an empty cell, you also call the creation of a dialogue.</string>
    <string name="help6">By clicking on a cell with data, you can access complete information. If you click on the blue phone icon, you can call the selected number.</string>
    <string name="help7">If you long press the cell data, you can open the context menu</string>
    <string name="help8">"Click the icon in the upper left corner. Here you can see the apartment, available today, data is now occupied apartments and reserved dates. In reserved you can call context menu. Obsolete data is automatically deleted after two months "</string>
    <string name="help9">In the upper right corner there is an item in the \"Sync\". If you enable synchronization, the data will be automatically saved in the Dropbox. Others your device when you turn on this feature will automatically synchronize the data stored in the cloud.</string>
    <string name="import_cancel">Import cancel</string>
    <string name="location">Location</string>
    <string name="login_dropbox">Login Dropbox</string>
    <string name="login_with_dropbox">Login with Dropbox</string>
    <string name="mobil">Mobil</string>
    <string name="move_data">Move data</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="new_client">New contact</string>
    <string name="next">Next</string>
    <string name="no_data">No data</string>
    <string name="notice">Notice</string>
    <string name="occupied_apartments">Occupied apartments</string>
    <string name="online">Online</string>
    <string name="open_info">Open info</string>
    <string name="paid">Paid</string>
    <string name="payment">Payment</string>
    <string name="please_waite">"Please wait - data is now deleted "</string>
    <string name="popup_menu_item_2">Popup menu item 2</string>
    <string name="rate_app">Rate app</string>
    <string name="removed">Contact\'s info was removed</string>
    <string name="removed_apartment">Apartment  was removed</string>
    <string name="removed_data">Date was removed</string>
    <string name="select_2nd_item">Select 2-nd item</string>
    <string name="select_action">Select action</string>
    <string name="setting">Setting</string>
    <string name="shortcut">Shortcut</string>
    <string name="start_date">Start date</string>
    <string name="success_sync">Success synchronization</string>
    <string name="sure_confirm">Are you sure want confirm data?</string>
    <string name="sync_filed">Synchronization filed</string>
    <string name="table">Table</string>
    <string name="title_activity_files">Files</string>
    <string name="to_rate_it">If you love our app, please take a moment to rate it</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3867788656747346/5976201710</string>
    <string name="banner_ad_unit_id2" translatable="false">ca-app-pub-3867788656747346/7574661717</string>
    <string name="nativ_mopub_id" translatable="false">d816c6cecb754d33b1e6f0f9dac7679f</string>
    <string name="address">Apartment\'s address</string>
    <string name="address_or_short_description">Address or short description</string>
    <string name="apartment">Apartment</string>
    <string name="apartment_adding_cancel">Apartment adding cancel</string>
    <string name="app_key" translatable="false">y138fsj8155rvmp</string>
    <string name="applicants">Reserved</string>
    <string name="back">Back</string>
    <string name="cant_read_folder">Can\'t read folder</string>
    <string name="client">Contact\'s</string>
    <string name="client_adding_cancel">Contact adding cancel</string>
    <string name="confirm">Confirm</string>
    <string name="data_adding_cancel">Data adding cancel</string>
    <string name="date_info">Date info</string>
    <string name="video_guide">Video guide</string>
</resources>
