<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"

        >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/free_apartment"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:id="@+id/btFree"/>
                <LinearLayout
                    android:id="@+id/linLayoutFree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:isScrollContainer="true"
                    android:orientation="vertical"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/occupied_apartments"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:id="@+id/btOccupied"/>
                <LinearLayout
                    android:id="@+id/linLayoutOccupied"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:isScrollContainer="true"
                    android:orientation="vertical"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/applicants"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:id="@+id/btLayout"/>
                <LinearLayout
                    android:id="@+id/linLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:isScrollContainer="true"
                    android:orientation="vertical"/>


            </LinearLayout>


        </ScrollView>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
