<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/first_name"
            android:id="@+id/tvClient1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/tvClient1"
            android:id="@+id/tvClient"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/tvClient"
            android:text="@string/mobil"
            android:id="@+id/tvRadioGroup"/>

        <RadioGroup
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRadioGroup"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="65dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:id="@+id/tvClientMobil"
            android:layout_alignRight="@+id/tvRadioGroup"
            android:layout_alignEnd="@+id/tvRadioGroup" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/call"
            android:src="@drawable/ic_communication_call"
            android:layout_below="@+id/tvClient"
            android:layout_alignEnd="@+id/tvClient"
            android:layout_alignRight="@+id/tvClientMobil"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvClientMobil"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/shortcut"
            android:textColor="@color/black_1"
            android:id="@+id/tvApartmentShortCut1"/>
  <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvApartmentShortCut1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textColor="@color/black_1"
            android:id="@+id/tvApartmentShortCut"/>

        <TextView
            android:id="@+id/tvDateStart"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/tvApartmentShortCut"
            android:textSize="16sp"
            android:textColor="@color/black_1"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tvDateEnd"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black_1"
            android:layout_below="@+id/tvApartmentShortCut"
            android:layout_alignRight="@+id/tvNotice"
            android:layout_alignEnd="@+id/tvNotice"
            android:layout_alignParentTop="@+id/tvDateStart"/>


        <TextView
            android:id="@+id/tvNotice1"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDateStart"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            android:text="@string/notice"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tvNotice"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNotice1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            android:textColor="@color/black_1"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tvDataOplacheno1"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/tvNotice"
            android:textSize="16sp"
            android:text="@string/paid"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tvDateDolg1"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/tvNotice"
            android:text="@string/debt"
            android:layout_alignRight="@+id/tvDateEnd"
            android:layout_alignEnd="@+id/tvDateEnd"
            android:layout_alignParentTop="@+id/tvDataOplacheno1"/>

        <TextView
            android:id="@+id/tvDataOplacheno"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/tvDataOplacheno1"
            android:textSize="16sp"
            android:textColor="@color/black_1"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tvDateDolg"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textColor="@color/black_1"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/tvDataOplacheno1"
            android:layout_alignRight="@+id/tvDateEnd"
            android:layout_alignEnd="@+id/tvDateEnd"
            android:layout_alignParentTop="@+id/tvDataOplacheno"/>


    </RelativeLayout>

</ScrollView>